# vanlife-workflows

./: .env.example  .gitignore  CLAUDE.md  README.md  modal_app.py  pyproject.toml
scripts/: cancel_jul4_watch.py  create_jul4_watch.py  migrate_alert_state.py  register_discord_commands.py
src/: alert_formatter.py  campflare.py  cost_tracker.py  discord.py  discord_interactions.py  site_photo.py  starlink_score.py
src/workflows/: mn_weekday_finder.py  np_camping_finder.py  region_finder.py  status.py  webhook_handler.py
